tests/integration/libuild/errors/excess-attrs-in-schema/index.ts
console.log('`excess-attrs-in-schema` is running...');
